@@ -230,8 +230,36 @@ public class YamlUtilsTest {
     public static class FindSpeakerDuplicatesTest {
         @Parameters
         public static Collection<Object[]> data() {
+            Speaker speaker0 = new Speaker();
+            speaker0.setId(0);
+            speaker0.setName(List.of(new LocaleItem("en", "name0")));
+
+            Speaker speaker1 = new Speaker();
+            speaker1.setId(1);
+            speaker1.setName(List.of(new LocaleItem("en", "name0")));
+            speaker1.setCompany(List.of(new LocaleItem("en", null)));
+
+            Speaker speaker2 = new Speaker();
+            speaker2.setId(2);
+            speaker2.setName(List.of(new LocaleItem("en", "name0")));
+            speaker2.setCompany(List.of(new LocaleItem("en", "")));
+
+            Speaker speaker3 = new Speaker();
+            speaker3.setId(3);
+            speaker3.setName(List.of(new LocaleItem("en", "name3")));
+            speaker3.setCompany(List.of(new LocaleItem("en", "company3")));
+
+            Speaker speaker4 = new Speaker();
+            speaker4.setId(4);
+            speaker4.setName(List.of(new LocaleItem("en", "name3")));
+            speaker4.setCompany(List.of(new LocaleItem("en", "company3")));
+
             return Arrays.asList(new Object[][]{
-                    {Collections.emptyList(), false}
+                    {Collections.emptyList(), false},
+                    {List.of(speaker0, speaker1), true},
+                    {List.of(speaker0, speaker2), true},
+                    {List.of(speaker0, speaker1, speaker2), true},
+                    {List.of(speaker3, speaker4), true}
             });
         }
 
